--- a/1examenLabo4/src/app/componentes/home/home.component.html
+++ b/1examenLabo4/src/app/componentes/home/home.component.html
@@ -9,10 +9,10 @@
         <button routerLink="/homeAdmin" class="btn btn-primary">Home Admin</button>
       </div>
       <div>
-        <button routerLink="/producto" class="btn btn-primary">productos</button>
+        <button routerLink="/producto" class="btn btn-primary">Productos</button>
       </div>
       <div>
-        <button routerLink="/producpais" class="btn btn-primary">verForm</button>
+        <button routerLink="/producpais" class="btn btn-primary">Listado de Productos</button>
       </div>
       <div>
         <button routerLink="/homeContenedores" class="btn btn-primary">Home Container</button>
