--- a/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.css
+++ b/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.css
@@ -97,3 +97,12 @@
     cursor: pointer;
     border-radius: 5px;
   }
+  .inputBarraBuscarProductos{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+
+
+    
+  }
