--- a/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.html
+++ b/1examenLabo4/src/app/componentes/listado-producto/listado-producto.component.html
@@ -4,9 +4,10 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-12">
-      <h2 class="mb-4">Listado de Productos</h2>
+      <h2 class="mb-4 ">Listado de Productos</h2>
+      <input type="text inputBarraBuscarProductos" placeholder="Buscar..." [(ngModel)]="searchText" class="search-box">
       <ul class="list-group" #productList>
-        <li *ngFor="let producto of productos" class="list-group-item list-group-item-action" (click)="seleccionarProducto(producto); ">
+        <li *ngFor="let producto of productos  | buscarproductos:searchText " class="list-group-item list-group-item-action" (click)="seleccionarProducto(producto); ">
           <div class="d-flex justify-content-between align-items-center">
             <div>
               <h5 class="mb-1">{{ producto.descripcion }}</h5>
@@ -15,8 +16,9 @@
             <span class="badge bg-primary rounded-pill">{{ producto.stock }}</span>
           </div>
           
-          <span class="flecha-abajo">&#8595;</span>
+         
         </li>
+        <span class="flecha-abajo">&#8595;</span>
       </ul>
 
       <div *ngIf="productos.length === 0" class="text-center mt-4">
