--- a/1examenLabo4/src/app/componentes/home/home.component.html
+++ b/1examenLabo4/src/app/componentes/home/home.component.html
@@ -17,6 +17,9 @@
       <div>
         <button routerLink="/homeContenedores" class="btn btn-primary">Home Container</button>
       </div>
+      <div>
+        <button routerLink="/pedidos" class="btn btn-primary">Pedidos</button>
+      </div>
       <h1>Perfil de GitHub</h1>
       <div *ngIf="user" class="mt-4">
         <h2>{{ user.name }}</h2>
