--- a/1examenLabo4/src/app/componentes/pedidos/pedidos.component.css
+++ b/1examenLabo4/src/app/componentes/pedidos/pedidos.component.css
@@ -28,30 +28,14 @@ h1 {
   margin-top: 5px;
 }
 
+button {
+  display: block;
+  width: 100%;
+  padding: 10px;
+}
+
 .text-danger {
   color: red;
   font-size: 0.875em;
   margin-top: 5px;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-ul li {
-  padding: 10px;
-  border-bottom: 1px solid #ccc;
-}
-
-ul li:last-child {
-  border-bottom: none;
-}
-
-button {
-  margin-right: 10px;
-}
-
-button:last-child {
-  margin-right: 0;
 }
