--- a/1examenLabo4/src/app/componentes/detalle-pedido/detalle-pedido.component.html
+++ b/1examenLabo4/src/app/componentes/detalle-pedido/detalle-pedido.component.html
@@ -6,7 +6,7 @@
       <h3>Pedidos Asociados</h3>
       <ul>
         <li *ngFor="let pedido of pedidos">
-          Código: {{ pedido.productoId }}, Cantidad: {{ pedido.cantidad }}, Fecha: {{ pedido.fecha | date }}
+          Código: {{ pedido.productoId }}, Cantidad: {{ pedido.cantidad }} 
         </li>
       </ul>
     </div>
