--- a/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
+++ b/1examenLabo4/src/app/componentes/listar-containers/listar-containers.component.html
@@ -1,10 +1,12 @@
-<div>
+<div class="container-list fondoDepantalla">
   <h2>Lista de Containers</h2>
   <ul>
     <li *ngFor="let container of containers | buscar:searchText">
-      {{ container.codigo }} - {{ container.empresa }}
-      <button (click)="onEdit(container, $event)">Editar</button>
-      <button (click)="onDelete(container, $event)">Eliminar</button>
+      <span>{{ container.codigo }} - {{ container.empresa }}</span>
+      <div class="button-group">
+        <button class="btn btn-edit" (click)="onEdit(container, $event)">Editar</button>
+        <button class="btn btn-delete" (click)="onDelete(container, $event)">Eliminar</button>
+      </div>
     </li>
   </ul>
 </div>
